# ames-python

./: ames-streamlit.py  ames_fastapi.py  dependencies.txt  deploy-api-gcs.py  docker-file-api  eda.ipynb  main.py  model_train.py  pyproject.toml  requirements.txt  requirements_gcloud.txt  st.ipynb  train_model.py  train_model_v1.py
model/: ames-rf-model.pkl  ames_rf_model.pkl  feature_names.pkl  selected_feature_names.pkl
