[project]
name = "ames-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=3.4.1",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.37.0",
]
